Wrote out full hex# for white
in header bg color.

--- a/customized-themes/seasons/css/style.css
+++ b/customized-themes/seasons/css/style.css
@@ -1397,7 +1397,7 @@
     color: #ff0000 /*changed by Colleen*/ ;
   }
   .winter header {
-    background-color: #fff;
+    background-color: #ffffff;
   }
   .winter nav.top {
     background-color: #244375 /*changed by Colleen*/ ;
