Added new p can span class
For white text on dark blue bg and for italics for notes.

--- a/customized-themes/seasons/css/style.css
+++ b/customized-themes/seasons/css/style.css
@@ -1422,6 +1422,15 @@
   .winter #intro {
     color: #fff;
   }
+
+   p.light-text {
+     color: #ffffff /*added by Colleen*/ ;
+  }
+  .note {
+	font-style: italic /*added by Colleen*/ ;
+  }
+
+
   .winter #content,
   .winter #secondary-nav .current a,
   .winter #secondary-nav a.current,
