Changed site body font color
To dark blue used in site bg.

--- a/customized-themes/seasons/css/style.css
+++ b/customized-themes/seasons/css/style.css
@@ -1375,7 +1375,7 @@
   /* @group ---------- Winter Styles ---------- */
   .winter body {
     background-color: #ffffff /*changed by Colleen*/ ;
-    color: #5a5a5a;
+    color: #000918;
   }
   .winter h1, .winter #site-title a {
     color: #859ca2;
